- fix navbar height on small device

--- a/css/style.css
+++ b/css/style.css
@@ -264,7 +264,7 @@
 
 @media (max-width: 767px) {
   .navbar-header {
-    margin-bottom: 25px;
+    margin-bottom: 40px;
   }
 
   .navbar-collapse {
